# z2p

./: .dockerignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml
scripts/: start_db.sh
src/: configuration.rs  lib.rs  main.rs  middleware.rs  repository.rs  startup.rs  state.rs  telemetry.rs
src/adapters/: mod.rs  mongodb_repository.rs
src/handlers/: health_check.rs  mod.rs  subscriptions.rs  test.rs
tests/: health_check.rs  subscribe.rs
tests/utils/: mod.rs
