[package]
authors = ["michele <michele.damico@gmail.com>"]
edition = "2018"
name = "z2p"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
async-std = {version = "1.6.3", features = ["attributes"]}
mongodb = {version = "1.1.0", default-features = false, features = ["async-std-runtime"]}
serde = "1.0.116"
tide = "0.13.0"
config = "0.10.1"
chrono = "0.4.19"

[dev-dependencies]
rstest = "0.6.4"
surf = "2.0.0"
