[package]
authors = ["michele <michele.damico@gmail.com>"]
edition = "2018"
name = "z2p"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
async-std = {version = "1.6.3", features = ["attributes"]}
chrono = "0.4.19"
config = "0.10.1"
mongodb = {version = "1.1.0", default-features = false, features = ["async-std-runtime"]}
serde = "1.0.116"
thiserror = "1.0.21"
tide = "0.13.0"
async-trait = "0.1.41"

[dev-dependencies]
csv = "1.1.3"
json = "0.12.4"
lazy_static = "1.4.0"
rstest = "0.6.4"
surf = "2.0.0"
