[package]
authors = ["michele <michele.damico@gmail.com>"]
edition = "2018"
name = "z2p"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
async-std = {version = "1.6.3", features = ["attributes"]}
async-trait = "0.1.41"
chrono = "0.4.19"
config = "0.10.1"
mongodb = {version = "1.1.0", default-features = false, features = ["async-std-runtime"]}
serde = "1.0.116"
thiserror = "1.0.21"
tide = "0.15.0"
tide-tracing = "0.0.7"
tracing = "0.1.22"
tracing-bunyan-formatter = "0.1.7"
tracing-futures = "0.2.4"
tracing-subscriber = {version = "0.2.15", features = ["registry", "env-filter"]}
uuid = "0.8.1"
tracing-log = "0.1.1"

[dev-dependencies]
csv = "1.1.3"
json = "0.12.4"
lazy_static = "1.4.0"
rstest = "0.6.4"
surf = "2.1.0"
